@@ -7,6 +7,7 @@ o Fixes #573: Arithmetics operations have wrong type
 o Fixes #567: Parameter maps coming through REST are not parsed correctly
 o Fixes #563: COUNT(*) does not return 0 for empty result
 o Fixes #561: RELATE doesn't work as expected with map-parameters
+o Fixes problem with optional properties and collection predicates (ALL/ANY/NONE/SINGLE/IN)
 
 1.8.M03 (2012-05-24)
 --------------------
